clusters/homelab/apps/ghost/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - name: http
      port: 80
      targetPort: 2368
