clusters/homelab/apps/ghost/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
